# quaketastic

./: .cproject  .gitignore  .project  CMakeLists.txt  Dims.hpp  README.md  bsp.hpp  bsp_map.hpp  bsp_map_loader.cpp  bsp_map_loader.hpp  main.cpp  main.cpp.autosave  main.cpp.orig  model_loader.cpp  model_loader.hpp
maps/: jof3dm2.bsp
shaders/: first.frag.cg  first.vert.cg
src/: application.cpp  test.cpp  typedefs.hpp
src/game/: game_state.hpp
src/input/: controls.hpp  default_controls.hpp
src/resources/: bsp.hpp  bsp_map.hpp  bsp_map_loader.cpp  bsp_map_loader.hpp  mesh.hpp  mesh_loader.cpp  mesh_loader.hpp  resource_cache.cpp  resource_cache.hpp
src/scene/: camera.hpp  scene.cpp  scene.hpp  static_object.hpp
